--- a/index.html
+++ b/index.html
@@ -48,14 +48,8 @@
 <body>
     <div class="container">
         <div class="vine-effect"></div>
-        <h1>Retro Forest Green Page</h1>
-        <p>This is a sample page with a forest green background and a retro text look. The vine effect adds a touch of nature to the design.</p>
-
-        <h2>Heading 2</h2>
-        <p>Another paragraph of text with the same retro style.</p>
-
-        <h3>Heading 3</h3>
-        <p>Feel free to add more content and customize this template to your needs.</p>
+        <h1>Welcome to my webpage</h1>
+        <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
     </div>
 </body>
 </html>
