--- a/index.html
+++ b/index.html
@@ -3,53 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Forest Green Page</title>
+    <title>Retro Pipe Animation</title>
     <style>
         body {
             background-color: #228B22; /* Forest Green */
-            color: #FFF8DC; /* Cornsilk color for retro text look */
-            font-family: 'Courier New', Courier, monospace; /* Retro text font */
-            padding: 20px;
             margin: 0;
+            overflow: hidden; /* Hide overflow to contain the pipes */
         }
 
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #2E8B57; /* Darker green for contrast */
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            position: relative;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        .vine-effect {
+        .pipe-container {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('vine.png'); /* Placeholder for vine image */
-            background-repeat: no-repeat;
-            background-size: cover;
-            opacity: 0.3;
-            pointer-events: none;
+        }
+
+        .pipe {
+            position: absolute;
+            fill: none;
+            stroke: #FFF8DC; /* Cornsilk color */
+            stroke-width: 10;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            animation: movePipe 10s linear infinite;
+        }
+
+        @keyframes movePipe {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(2000px, 2000px); /* Adjust this to change pipe movement */
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="vine-effect"></div>
-        <h1>Welcome to my webpage</h1>
-        <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
+    <div class="pipe-container">
+        <svg class="pipe" viewBox="0 0 400 400">
+            <path d="M 10 10 H 200 V 100 H 50 V 300 H 350 V 150 H 100 V 350 H 200" />
+        </svg>
     </div>
+
+    <h1 style="color: #FFF8DC; text-align: center; padding-top: 200px; font-family: 'Courier New', Courier, monospace;">
+        Welcome to my webpage
+    </h1>
+    <p style="color: #FFF8DC; text-align: center; font-family: 'Courier New', Courier, monospace;">
+        I am currently in the process of updating it and trying out different options. Nothing to see here yet.
+    </p>
 </body>
 </html>
