--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Retro Pipe Animation</title>
     <style>
         body {
-            background-color: #228B22; /* Forest Green */
+            background-color: #001a00; /* Very Dark Green, almost black */
             margin: 0;
             overflow: hidden; /* Hide overflow to contain the pipes */
         }
@@ -37,6 +37,16 @@
                 transform: translate(2000px, 2000px); /* Adjust this to change pipe movement */
             }
         }
+
+        h1, p {
+            color: #FFF8DC; /* Cornsilk color for text */
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace; /* Retro text font */
+        }
+
+        h1 {
+            padding-top: 200px;
+        }
     </style>
 </head>
 <body>
@@ -46,11 +56,7 @@
         </svg>
     </div>
 
-    <h1 style="color: #FFF8DC; text-align: center; padding-top: 200px; font-family: 'Courier New', Courier, monospace;">
-        Welcome to my webpage
-    </h1>
-    <p style="color: #FFF8DC; text-align: center; font-family: 'Courier New', Courier, monospace;">
-        I am currently in the process of updating it and trying out different options. Nothing to see here yet.
-    </p>
+    <h1>Welcome to my webpage</h1>
+    <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
 </body>
 </html>
