--- a/index.html
+++ b/index.html
@@ -3,64 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Duck</title>
+    <title>Retro Duck Animation</title>
     <style>
         body {
             background-color: #001a00; /* Very Dark Green, almost black */
             margin: 0;
             overflow: hidden; /* Hide overflow to contain the duck */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        }
+
+        .duck-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
 
         .duck {
             position: absolute;
+            fill: #FFF8DC; /* Cornsilk color for the duck */
             width: 100px;
             height: 100px;
-            fill: #FFF8DC; /* Cornsilk color for the duck */
+            animation: moveDuck 10s linear infinite;
+        }
+
+        @keyframes moveDuck {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(2000px, 2000px); /* Adjust this to change duck movement */
+            }
+        }
+
+        h1, p {
+            color: #FFF8DC; /* Cornsilk color for text */
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace; /* Retro text font */
+        }
+
+        h1 {
+            padding-top: 200px;
         }
     </style>
 </head>
 <body>
+    <div class="duck-container">
+        <svg class="duck" viewBox="0 0 64 64">
+            <!-- Simple duck SVG path -->
+            <path d="M32 4C18.7 4 8 14.7 8 28s10.7 24 24 24 24-10.7 24-24S45.3 4 32 4zM42.9 33.7c-2.7 0-4.9 2.2-4.9 4.9 0 2.7 2.2 4.9 4.9 4.9 2.7 0 4.9-2.2 4.9-4.9 0-2.7-2.2-4.9-4.9-4.9zM24 32c-2.7 0-4.9 2.2-4.9 4.9 0 2.7 2.2 4.9 4.9 4.9 2.7 0 4.9-2.2 4.9-4.9 0-2.7-2.2-4.9-4.9-4.9z"/>
+        </svg>
+    </div>
 
-    <svg class="duck" viewBox="0 0 64 64">
-        <!-- Simple duck SVG path -->
-        <path d="M32 4C18.7 4 8 14.7 8 28s10.7 24 24 24 24-10.7 24-24S45.3 4 32 4zM42.9 33.7c-2.7 0-4.9 2.2-4.9 4.9 0 2.7 2.2 4.9 4.9 4.9 2.7 0 4.9-2.2 4.9-4.9 0-2.7-2.2-4.9-4.9-4.9zM24 32c-2.7 0-4.9 2.2-4.9 4.9 0 2.7 2.2 4.9 4.9 4.9 2.7 0 4.9-2.2 4.9-4.9 0-2.7-2.2-4.9-4.9-4.9z"/>
-    </svg>
-
-    <script>
-        const duck = document.querySelector('.duck');
-        let x = 0;
-        let y = 0;
-        let dx = 2;
-        let dy = 2;
-        const duckWidth = 100;
-        const duckHeight = 100;
-
-        function moveDuck() {
-            const width = window.innerWidth;
-            const height = window.innerHeight;
-
-            // Bounce off the walls
-            if (x + dx > width - duckWidth || x + dx < 0) {
-                dx = -dx;
-            }
-            if (y + dy > height - duckHeight || y + dy < 0) {
-                dy = -dy;
-            }
-
-            x += dx;
-            y += dy;
-
-            duck.style.transform = `translate(${x}px, ${y}px)`;
-
-            requestAnimationFrame(moveDuck);
-        }
-
-        moveDuck();
-    </script>
-
+    <h1>Welcome to my webpage</h1>
+    <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
 </body>
 </html>
