--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            flex-direction: column;
         }
 
         .magnifying-glass-container {
@@ -65,6 +66,26 @@
         h1 {
             padding-top: 200px;
         }
+
+        .link-container {
+            margin-top: 20px;
+        }
+
+        a {
+            color: #FFF8DC;
+            text-decoration: none;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 1.5em;
+            border: 2px solid #FFF8DC;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #FFF8DC;
+            color: #001a00;
+        }
     </style>
 </head>
 <body>
@@ -74,6 +95,10 @@
 
     <h1>Welcome to my webpage</h1>
     <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
+
+    <div class="link-container">
+        <a href="index2.html">Go to the Second Page</a>
+    </div>
 
     <script>
         const magnifyingGlass = document.getElementById('magnifying-glass');
