--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,138 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bouncing Magnifying Glass with Link</title>
+    <style>
+        body {
+            background-color: #001a00; /* Very Dark Green, almost black */
+            margin: 0;
+            overflow: hidden; /* Hide overflow to contain the magnifying glass */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        .magnifying-glass-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #magnifying-glass {
+            font-size: 10em;
+            display: inline-block;
+            width: 0.4em;
+            box-sizing: content-box;
+            height: 0.4em;
+            border: 0.1em solid red;
+            position: relative;
+            border-radius: 0.35em;
+        }
+
+        #magnifying-glass:before {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            right: -0.25em;
+            bottom: -0.1em;
+            border-width: 0;
+            background: red;
+            width: 0.35em;
+            height: 0.08em;
+            transform: rotate(45deg);
+        }
+
+        @keyframes moveMagnifyingGlass {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(2000px, 2000px); /* Adjust this to change movement */
+            }
+        }
+
+        h1, p {
+            color: #FFF8DC; /* Cornsilk color for text */
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace; /* Retro text font */
+        }
+
+        h1 {
+            padding-top: 200px;
+        }
+
+        .link-container {
+            margin-top: 20px;
+        }
+
+        a {
+            color: #FFF8DC;
+            text-decoration: none;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 1.5em;
+            border: 2px solid #FFF8DC;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            position: relative; /* Ensure link is clickable */
+            z-index: 10; /* Ensure link appears above other elements */
+        }
+
+        a:hover {
+            background-color: #FFF8DC;
+            color: #001a00;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="magnifying-glass-container">
+        <div id="magnifying-glass"></div>
+    </div>
+
+    <h1>Welcome to my webpage</h1>
+    <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
+
+    <div class="link-container">
+        <a href="index_rotation.html">Go to the Rotation Report</a>
+    </div>
+
+    <script>
+        const magnifyingGlass = document.getElementById('magnifying-glass');
+        let x = 0;
+        let y = 0;
+        let dx = 2;
+        let dy = 2;
+        const magnifyingGlassWidth = magnifyingGlass.offsetWidth;
+        const magnifyingGlassHeight = magnifyingGlass.offsetHeight;
+
+        function moveMagnifyingGlass() {
+            const width = window.innerWidth;
+            const height = window.innerHeight;
+
+            // Bounce off the walls
+            if (x + dx > width - magnifyingGlassWidth || x + dx < 0) {
+                dx = -dx;
+            }
+            if (y + dy > height - magnifyingGlassHeight || y + dy < 0) {
+                dy = -dy;
+            }
+
+            x += dx;
+            y += dy;
+
+            magnifyingGlass.style.transform = `translate(${x}px, ${y}px)`;
+
+            requestAnimationFrame(moveMagnifyingGlass);
+        }
+
+        moveMagnifyingGlass();
+    </script>
 </body>
 </html>
