--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Magnifying Glass with Link</title>
+    <title>Bouncing Magnifying Glass with Image and Link</title>
     <style>
         body {
             background-color: #001a00; /* Very Dark Green, almost black */
@@ -89,6 +88,14 @@
             background-color: #FFF8DC;
             color: #001a00;
         }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
     </style>
 </head>
 <body>
@@ -99,8 +106,11 @@
     <h1>Welcome to my webpage</h1>
     <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
 
+    <!-- Add your image here -->
+    <img src="ubq_pushed.jpg" alt="1UBQ Being Pushed">
+
     <div class="link-container">
-        <a href="index_rotation.html">Go to the Rotation Report</a>
+        <a href="index2.html">Go to the Second Page</a>
     </div>
 
     <script>
