--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,7 @@
     </div>
 
     <h1>Welcome to my webpage</h1>
-    <p>I am currently in the process of updating it and trying out different options. Nothing to see here yet.</p>
+    <p>I see you clicked to the second page, here is an image of ubiquitin being pushed during a steered molecular dynamics simulation performed in NAMD. </p>
 
     <!-- Add your image here -->
     <img src="ubq_pushed.jpg" alt="1UBQ Being Pushed">
