--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Finn Beruldsen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
+					<h1 id="logo"><a href="#">Finn Beruldsen</a></h1>
 					<p>I got reprogrammed by a rogue AI<br />
 					and now I'm totally cray</p>
 				</header>
@@ -53,11 +53,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
+										<h2>Finn Beruldsen</h2>
+										<p>Welcome<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am a Biochemistry Doctoral researcher specializing in T-cell receptor biology, examining it through both computational and structural lenses. Under the guidance of Dr. Dinler Antunes, I develop software designed to enhance cell-based immunotherapies by improving their targeting, sensitivity, and safety. </p>
 								</div>
 							</section>
 
