--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="Finn Beruldsen's Avatar" /></span>
+					<span class="Picture of Finn"><img src="Finn_Beruldsen_Portrait_Headshot.jpg" alt="Finn Beruldsen's Image" /></span>
 					<h1 id="logo"><a href="#">Finn Beruldsen</a></h1>
 					<p>Biochemist, Bioinformatician, and Researcher<br />
 					Focused on Immunotherapy and Computational Biology</p>
