--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<h3>A Few Accomplishments</h3>
 									<div class="features">
 										<article>
-											<a href="https://yourpublicationsite.com" class="image"><img src="images/research.jpg" alt="T-cell receptor research" /></a>
+											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="T-cell receptor research" /></a>
 											<div class="inner">
 												<h4>Published Paper on T-cell Receptor Research</h4>
 												<p>Co-authored a paper in the Journal of Immunology on the structural modeling of T-cell receptors, contributing to breakthroughs in targeted cancer therapies.</p>
