added website links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="Finn_Beruldsen_Portrait_Headshot.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/headshot.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Finn Beruldsen</a></h1>
 					<p>Biochemist, Bioinformatician, and Researcher<br />
 					Focused on Immunotherapy and Computational Biology</p>
@@ -33,9 +33,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/yourprofile" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/yourprofile" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:your-email@example.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/finn-beruldsen-32b02212b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/Finn2400" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:fpberuld@cougarnet.uh.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -79,7 +79,7 @@
 									<h3>A Few Accomplishments</h3>
 									<div class="features">
 										<article>
-											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="T-cell receptor research" /></a>
+											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="/images/pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="T-cell receptor research" /></a>
 											<div class="inner">
 												<h4>Published Paper on T-cell Receptor Research</h4>
 												<p>Co-authored a paper in the Journal of Immunology on the structural modeling of T-cell receptors, contributing to breakthroughs in targeted cancer therapies.</p>
