add poster information

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="images/pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Published Paper on T-cell Receptor Research</h4>
-												<p>Co-authored a paper in the Journal of Immunology on the structural modeling of T-cell receptors, contributing to breakthroughs in targeted cancer therapies.</p>
+												<p>Co-authored a paper in Pathogens.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/yourprofile/neoantigen-prediction" class="image"><img src="images/neoantigen.jpg" alt="Neoantigen prediction tool" /></a>
+											<a href="https://www.utmb.edu/scsb/symposium" class="image"><img src="images/sealy_FB2024_april.jpg" alt="Recent Presenation" /></a>
 											<div class="inner">
-												<h4>Developed Neoantigen Prediction Software</h4>
-												<p>Created bioinformatics tools for predicting cancer neoantigens, used in precision immunotherapy treatments. Open-sourced for use by global research teams.</p>
+												<h4>Time Series RMSF A novel way to combine the features of RMSD and RMSF</h4>
+												<p>I resented a new tool I've created for understanding both steered and classical MD simulations.</p>
 											</div>
 										</article>
 									</div>
