--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 											<a href="https://www.utmb.edu/scsb/symposium" class="image"><img src="images/sealy_FB2024_april.jpg" alt="Recent Presenation" /></a>
 											<div class="inner">
 												<h4>Time Series RMSF A novel way to combine the features of RMSD and RMSF</h4>
-												<p>I resented a new tool I've created for understanding both steered and classical MD simulations.</p>
+												<p>I presented a new tool I've created for understanding both steered and classical MD simulations.</p>
 											</div>
 										</article>
 									</div>
