--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Finn Beruldsen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Finn Beruldsen: Biochemist and Researcher in Computational Immunotherapy and Structural Biology">
+		<meta name="description" content="Finn Beruldsen: Structural Bioinformatician and Researcher in Computational Immunotherapy and Structural Biology">
 		<meta name="keywords" content="immunotherapy, bioinformatics, computational biology, T-cell receptor, neoantigen prediction">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/headshot.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Finn Beruldsen</a></h1>
-					<p>Biochemist, Bioinformatician, and Researcher<br />
+					<p> Bioinformatician, Biochemist, and Researcher<br />
 					Focused on Immunotherapy and Computational Biology</p>
 				</header>
 				<nav id="nav">
@@ -56,7 +56,7 @@
 										<h2>Finn Beruldsen</h2>
 										<p>Welcome<br />
 									</header>
-									<p>I am a Biochemistry Doctoral researcher specializing in T-cell receptor biology, examining it through both computational and structural lenses. Under the guidance of Dr. Dinler Antunes, I develop software designed to enhance cell-based immunotherapies by improving their targeting, sensitivity, and safety.</p>
+									<p>I am a Doctoral researcher at the Univeristy of Houston in the Department of Biology and Biochemistry. I specialize in T-cell receptor biology, examining it through both computational and structural lenses. Under the guidance of Dr. Dinler Antunes, I develop software designed to enhance cell-based immunotherapies by improving their targeting, sensitivity, and safety.</p>
 								</div>
 							</section>
 
