added CNRCs to blurb

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<h2>Finn Beruldsen</h2>
 										<p>Welcome<br />
 									</header>
-									<p>I am a Doctoral researcher at the Univeristy of Houston in the Department of Biology and Biochemistry. I specialize in T-cell receptor biology, examining it through both computational and structural lenses. Under the guidance of <a href="https://dinlerantunes.com/" target="_blank">Dr. Dinler Antunes</a>, I develop software designed to enhance cell-based immunotherapies by improving their targeting, sensitivity, and safety.</p>
+									<p>I am a Doctoral researcher at the Center for Nuclear Receptors and Cell Signaling (CNRCS) at Univeristy of Houston. I specialize in T-cell receptor biology, examining it through both computational and structural lenses. Under the guidance of <a href="https://dinlerantunes.com/" target="_blank">Dr. Dinler Antunes</a>, I develop software designed to enhance cell-based immunotherapies by improving their targeting, sensitivity, and safety.</p>
 								</div>
 							</section>
 
