--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="Banner Image" />
+									<img src="ubq_pushed.jpg" alt="Ubquitin pushed" />
 								</div>
 								<div class="container">
 									<header class="major">
