remove sql, add gromacs and NAMD

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<ul class="feature-icons">
-										<li class="icon solid fa-database">Analyze biological data (Python, R, SQL)</li>
+										<li class="icon solid fa-database">Analyze biological data (Python, R, NAMD, Gromacs)</li>
 										<li class="icon solid fa-laptop-code">Develop bioinformatics pipelines</li>
 										<li class="icon solid fa-network-wired">Apply machine learning to immunotherapy research</li>
 										<li class="icon solid fa-flask">Perform experimental immunology research</li>
