added CNRCs cover work

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<div class="features">
+
+										<article>
+											<a href="https://uh.edu/nsm/cnrcs/news-events/symposium/" class="image"><img src="/Users/finn/Documents/GitHub/Finn2400.github.io/images/Copy of CNRCS_2024 Blue Sky Bronze (US Letter) (2).pdf" alt="CNRCS Symposium Cover" /></a>
+											<div class="inner">
+												<h4>CNRCS Annual Symposium Cover Selection</h4>
+												<p>My work was chosen for the cover of the Center for Nuclear Receptor Signalling's annual symposium.</p>
+											</div>
+										</article>	
 										<article>
 											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="images/pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="" /></a>
 											<div class="inner">
