--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<div class="features">
 
 										<article>
-											<a href="https://uh.edu/nsm/cnrcs/news-events/symposium/" class="image"><img src="images/Copy of CNRCS_2024 Blue Sky Bronze (US Letter).png" alt="CNRCS Symposium Cover" /></a>
+											<a href="https://uh.edu/nsm/cnrcs/news-events/symposium/" class="image"><img src="images/CNRCS_2024BlueSkyBronze.jpg" alt="CNRCS Symposium Cover" /></a>
 											<div class="inner">
 												<h4>CNRCS Annual Symposium Cover Selection</h4>
 												<p>My work was chosen for the cover of the Center for Nuclear Receptor Signalling's annual symposium.</p>
