--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 										<article>
 											<a href="https://www.mdpi.com/2076-0817/12/5/716#" class="image"><img src="images/pathogens-Collaboration-with-Cornberg-and-klein.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Published Paper on T-cell Receptor Research</h4>
-												<p>Co-authored a paper in Pathogens.</p>
+												<h4>Co-authored a paper in Pathogens.</h4>
+												<p>My contribution, modeling of peptide–MHC complexes revealed different binding properties and electrostatic potential.</p>
 											</div>
 										</article>
 										<article>
