--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											<a href="https://uh.edu/nsm/cnrcs/news-events/symposium/" class="image"><img src="images/CNRCS_2024BlueSkyBronze.jpg" alt="CNRCS Symposium Cover" /></a>
 											<div class="inner">
 												<h4>CNRCS Annual Symposium Cover Selection</h4>
-												<p>My work was chosen for the cover of the Center for Nuclear Receptor Signalling's annual symposium.</p>
+												<p>My work was chosen for the cover of the Center for Nuclear Receptor Signalling's Annual Symposium. You can read more about this cover art of Anaphase-Promoting Complex / Cyclosome (APC/C), inspired by the Great Wave, at the CNRCS website. </p>
 											</div>
 										</article>	
 										<article>
